fixed gap again

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 
 
 html, body {
-  width: 1200px;
+  width: 100%;
   overflow-x: hidden;
 }
 
